Fixed issue where error message is being shown after clicking on a language and before language chip is added.

--- a/Trappist/src/Promact.Trappist.Web/wwwroot/app/questions/questions-programming/questions-programming.html
+++ b/Trappist/src/Promact.Trappist.Web/wwwroot/app/questions/questions-programming/questions-programming.html
@@ -56,7 +56,7 @@
                         </md-autocomplete>
                     </md-chip-list>
                     <div class="errors-container">
-                        <div *ngIf="nolanguageSelected  && (languageInput.dirty || languageInput.touched)">
+                        <div *ngIf="nolanguageSelected && languageInput.dirty">
                             <span class="error-msg">Please select atleast one programming language</span>
                         </div>
                     </div>
