added loader at required pages and improved validation

--- a/Trappist/src/Promact.Trappist.Web/wwwroot/app/tests/test-settings/test-settings.html
+++ b/Trappist/src/Promact.Trappist.Web/wwwroot/app/tests/test-settings/test-settings.html
@@ -1,6 +1,9 @@
 ﻿<div class="test-create-steps test-settings">
   <form #settingsForm="ngForm">
     <create-test-header [testDetails]="testDetails" [testNameReference]="testNameReference"></create-test-header>
+      <div class="loader-container" *ngIf="loader">
+          <div class="spinner"></div>
+      </div>
     <div class="container">
       <h5>Settings & Schedule</h5>
       <div class="form-area">
