--- a/Trappist/src/Promact.Trappist.Web/wwwroot/app/tests/tests-dashboard/tests-dashboard.html
+++ b/Trappist/src/Promact.Trappist.Web/wwwroot/app/tests/tests-dashboard/tests-dashboard.html
@@ -7,28 +7,28 @@
             <h1 class="pull-left">Tests</h1>
             <div class="search-area pull-right">
                 <input type="text" placeholder="Search tests" [hidden]="!showSearchInput" [(ngModel)]="searchTest" (blur)="showSearchInput = false" />
-                <button type="button" (click)="showSearchInput = true"><i class="material-icons">search</i></button>
+                <button type="button" (click)="showSearchInput = true"><em class="material-icons">search</em></button>
             </div>
         </div>
         <div class="blocks-area">
             <div class="row">
                 <div class="col-md-5ths col-sm-4">
                     <div class="create-test-block" (click)="createTestDialog()">
-                        <i class="material-icons">add</i>
+                        <em class="material-icons">add</em>
                         <h5>Create New Test</h5>
                     </div>
                 </div>
-                <div *ngFor="let test of Tests | filter: searchTest ">
+                <div *ngFor="let test of Tests | filter: searchTest let i=index">
                     <div class="col-md-5ths col-sm-4">
                         <div class="test-block">
                             <div class="test-title clearfix">
                                 <h5 class="pull-left" title="{{test.testName}}">{{test.testName}}</h5>
-                                <i class="material-icons pull-right" [mdMenuTriggerFor]="testMenu">more_vert</i>
+                                <em class="material-icons pull-right" [mdMenuTriggerFor]="testMenu">more_vert</em>
                                 <md-menu #testMenu="mdMenu" [overlapTrigger]="false" x-position="before">
-                                    <a md-menu-item>Edit</a>
-                                    <a md-menu-item (click)="deleteTestDialog(test)">Delete</a>
-                                    <a md-menu-item (click)="duplicateTestDialog(test)">Duplicate</a>
-                                    <a md-menu-item [routerLink]="[test.id,'settings']">Settings</a>
+                                    <button md-menu-item [disabled]="!test.isEditTestEnable" (click)="editTest(test)">Edit</button>
+                                    <button md-menu-item (click)="deleteTestDialog(test)">Delete</button>
+                                    <button md-menu-item (click)="duplicateTestDialog(test)">Duplicate</button>
+                                    <button md-menu-item [routerLink]="[test.id,'settings']">Settings</button>
                                 </md-menu>
                             </div>
                             <div class="test-details">
