--- a/Trappist/src/Promact.Trappist.Web/wwwroot/app/questions/questions-dashboard/update-category-dialog.html
+++ b/Trappist/src/Promact.Trappist.Web/wwwroot/app/questions/questions-dashboard/update-category-dialog.html
@@ -6,7 +6,7 @@
     <md-dialog-content>
         <div class="form-group">
             <label>Section Name</label>
-            <input type="text" class="form-control" id="CategoryName" [(ngModel)]="category.categoryName" (keyup)="changeErrorMessage()" name="CategoryName" #CategoryName="ngModel" maxlength="150" required />
+            <input type="text" class="form-control" id="CategoryName" [(ngModel)]="category.categoryName" (keyup.enter)="updateCategory(category)" (keyup)="changeErrorMessage()" name="CategoryName" #CategoryName="ngModel" maxlength="150" required />
             <div class="errors-container">
                 <span *ngIf="isCategoryNameExist" class="error-msg">{{errorMessage}}</span>
                 <span *ngIf="CategoryName.errors && (CategoryName.dirty || CategoryName.touched)" [hidden]="!CategoryName.errors.required" class="error-msg">Category Name Required</span>
