--- a/Trappist/src/Promact.Trappist.Web/wwwroot/app/tests/tests-dashboard/duplicate-test-dialog.html
+++ b/Trappist/src/Promact.Trappist.Web/wwwroot/app/tests/tests-dashboard/duplicate-test-dialog.html
@@ -10,7 +10,7 @@
     <md-dialog-content>
         <div class="form-group">
             <label class="h4">Test Name</label>
-            <input type="text" name="name" class="form-control" [(ngModel)]="testName" #name="ngModel" required maxlength="150" pattern="^[a-zA-Z0-9_@ ]*$" (ngModelChange)="onErrorChange()" />
+            <input type="text" name="name" class="form-control" [(ngModel)]="testName" #name="ngModel" required maxlength="150" pattern="^[a-zA-Z0-9_@ ]*$" (ngModelChange)="onErrorChange()" (keyup.enter)="duplicateTest()"/>
             <div class="errors-container">
                 <span class="error-msg" *ngIf="name.touched && !name.valid && name.errors.required">Name is required</span>
                 <span class="error-msg" *ngIf="name.touched && !name.valid && name.errors.pattern">Test name should be alphanumeric. Allowed special characters are @, _ and white space</span>
