Added loader in changePasswordDialog and in profile-edit page

--- a/Trappist/src/Promact.Trappist.Web/wwwroot/app/profile/profile-dashboard/change-password-dialog.html
+++ b/Trappist/src/Promact.Trappist.Web/wwwroot/app/profile/profile-dashboard/change-password-dialog.html
@@ -1,4 +1,8 @@
-﻿<div class="dialog">
+﻿<div class="loader-container" *ngIf="loader">
+    <div class="spinner">
+    </div>
+</div>
+<div class="dialog" >
     <div class="dialog-title clearfix">
         <h1 class="pull-left" md-dialog-title>Change Password</h1>
         <button type="button" class="pull-right" md-dialog-close><em class="material-icons">close</em></button>
@@ -32,7 +36,7 @@
         </md-dialog-content>
         <md-dialog-actions>
             <button type="button" class="btn" md-dialog-close>Cancel</button>
-            <button type="submit" class="btn btn-primary" [disabled]="!passwordForm.form.valid" (click)="changePassword(user)">Save</button>
+            <button type="submit" class="btn btn-primary" [disabled]="!passwordForm.form.valid">Save</button>
         </md-dialog-actions>
     </form>
 </div>
