--- a/Trappist/src/Promact.Trappist.Web/wwwroot/app/profile/profile-edit/profile-edit.html
+++ b/Trappist/src/Promact.Trappist.Web/wwwroot/app/profile/profile-edit/profile-edit.html
@@ -1,4 +1,8 @@
-﻿<div class="container">
+﻿<div class="loader-container" *ngIf="loader">
+    <div class="spinner">
+    </div>
+</div>
+<div class="container">
     <div class="userprofile">
         <div class="title-area mb20">
             <h1>Profile</h1>
