--- a/Trappist/src/Promact.Trappist.Web/wwwroot/app/conduct/test/test.html
+++ b/Trappist/src/Promact.Trappist.Web/wwwroot/app/conduct/test/test.html
@@ -1,4 +1,8 @@
-﻿<div class="test">
+﻿<div class="loader-container" *ngIf="!isTestReady">
+  <div class="spinner">
+  </div>
+</div>
+<div class="test" id="testElement">
     <div class="test-header">
         <div class="container-fluid">
             <div class="display-table">
@@ -7,10 +11,10 @@
                 </div>
                 <div class="display-table-cell text-center">
                     <h2 class="mb5">{{test.testName}}</h2>
-                    <p class="mb0">John Doe</p>
+                    <p class="mb0">{{testAttendee.firstName}}&nbsp;{{testAttendee.lastName}}</p>
                 </div>
                 <div class="display-table-cell text-right">
-                    <button type="button" class="btn btn-primary">End Test</button>
+                    <button type="button" class="btn btn-primary" (click)="endTest()">End Test</button>
                     <br class="hidden-lg" />
                     <h5 class="mlr10">Time Remaining:</h5>
                     <h2 class="mt3">{{timeString}}</h2>
@@ -23,7 +27,7 @@
             <div class="container-fluid">
                 <div class="display-table">
                     <div class="display-table-cell ptb10">
-                        <h6>Question #3</h6>
+                        <h6>Question #{{questionIndex+1}}</h6>
                     </div>
                     <div class="display-table-cell ptb10 pl15">
                         <h6>Select the answer(s)</h6>
@@ -35,16 +39,18 @@
             <div class="container-fluid">
                 <div class="display-table">
                     <div class="display-table-cell qs-area ptb20">
-                        <p>Which type of C++ object can have its elements changed, added, or removed?</p>
+                        <p>{{questionDetail}}</p>
                     </div>
-                    <div class="display-table-cell ans-area ptb20 pl15">
+                    <div class="display-table-cell ans-area ptb20 pl15" *ngIf="isQuestionSingleChoice">
                         <md-radio-group>
-                            <md-radio-button value="option1">String</md-radio-button>
-                            <md-radio-button value="option2">Mutable</md-radio-button>
-                            <md-radio-button value="option3">MemDev()</md-radio-button>
-                            <md-radio-button value="option4">Immutable</md-radio-button>
+                            <md-radio-button *ngFor="let option of options;let i = index" [disabled]="questionStatus == 0"  value="{{option.id}}" name="option.option_{{i}}" (change)="selectOption(questionIndex,i,true)" [checked]="option.isAnswer">{{option.option}}</md-radio-button>
                         </md-radio-group>
                     </div>
+                  <div class="display-table-cell ans-area ptb20 pl15" *ngIf="!isQuestionSingleChoice">
+                    <md-checkbox *ngFor="let option of options; let i = index" [disabled]="questionStatus == 0" (change)="selectOption(questionIndex,i)" [checked]="option.isAnswer">
+                      {{option.option}}
+                    </md-checkbox>
+                  </div>
                 </div>
             </div>
         </div>
@@ -52,98 +58,7 @@
     <div class="test-footer">
         <div class="test-footer-top ptb10">
             <div class="container-fluid">
-                <span class="answered">1</span>
-                <span class="review">2</span>
-                <span class="selected">3</span>
-                <span class="answered">4</span>
-                <span class="answered">5</span>
-                <span class="answered">6</span>
-                <span class="answered">7</span>
-                <span class="answered">8</span>
-                <span class="unanswered">9</span>
-                <span class="unanswered">10</span>
-                <span class="unanswered">11</span>
-                <span class="answered">12</span>
-                <span class="review">13</span>
-                <span class="unanswered">14</span>
-                <span class="unanswered">15</span>
-                <span class="review">16</span>
-                <span class="unanswered">17</span>
-                <span class="unanswered">18</span>
-                <span class="unanswered">19</span>
-                <span class="unanswered">20</span>
-                <span class="unanswered">21</span>
-                <span class="unanswered">22</span>
-                <span class="unanswered">23</span>
-                <span class="unanswered">24</span>
-                <span class="unanswered">25</span>
-                <span class="unanswered">26</span>
-                <span class="unanswered">27</span>
-                <span class="unanswered">28</span>
-                <span class="unanswered">29</span>
-                <span class="unanswered">30</span>
-                <span class="unanswered">31</span>
-                <span class="unanswered">32</span>
-                <span class="unanswered">33</span>
-                <span class="unanswered">34</span>
-                <span class="unanswered">35</span>
-                <span class="unanswered">36</span>
-                <span class="unanswered">37</span>
-                <span class="unanswered">38</span>
-                <span class="unanswered">39</span>
-                <span class="unanswered">40</span>
-                <span class="unanswered">41</span>
-                <span class="unanswered">42</span>
-                <span class="unanswered">43</span>
-                <span class="unanswered">44</span>
-                <span class="unanswered">45</span>
-                <span class="unanswered">46</span>
-                <span class="unanswered">47</span>
-                <span class="unanswered">48</span>
-                <span class="unanswered">49</span>
-                <span class="unanswered">50</span>
-                <span class="unanswered">51</span>
-                <span class="unanswered">52</span>
-                <span class="unanswered">53</span>
-                <span class="unanswered">54</span>
-                <span class="unanswered">55</span>
-                <span class="unanswered">56</span>
-                <span class="unanswered">57</span>
-                <span class="unanswered">58</span>
-                <span class="unanswered">59</span>
-                <span class="unanswered">60</span>
-                <span class="unanswered">61</span>
-                <span class="unanswered">62</span>
-                <span class="unanswered">63</span>
-                <span class="unanswered">64</span>
-                <span class="unanswered">65</span>
-                <span class="unanswered">66</span>
-                <span class="unanswered">67</span>
-                <span class="unanswered">68</span>
-                <span class="unanswered">69</span>
-                <span class="unanswered">70</span>
-                <span class="unanswered">71</span>
-                <span class="unanswered">72</span>
-                <span class="unanswered">73</span>
-                <span class="unanswered">74</span>
-                <span class="unanswered">75</span>
-                <span class="unanswered">76</span>
-                <span class="unanswered">77</span>
-                <span class="unanswered">78</span>
-                <span class="unanswered">79</span>
-                <span class="unanswered">80</span>
-                <span class="unanswered">81</span>
-                <span class="unanswered">82</span>
-                <span class="unanswered">83</span>
-                <span class="unanswered">84</span>
-                <span class="unanswered">85</span>
-                <span class="unanswered">86</span>
-                <span class="unanswered">87</span>
-                <span class="unanswered">88</span>
-                <span class="unanswered">89</span>
-                <span class="unanswered">90</span>
-                <span class="unanswered">91</span>
-                <span class="unanswered">92</span>
+                <span class={{getQuestionStatus(testQuestion.questionStatus)}} *ngFor="let testQuestion of testQuestions; let i = index" (click)="navigateToQuestionIndex(i)">{{i+1}}</span>
             </div>
         </div>
         <div class="test-footer-bottom ptb10">
@@ -152,12 +67,12 @@
                     <div class="col-lg-6 col-md-12 col-sm-12 hidden-lg mb10">
                         <div class="row">
                             <div class="col-lg-6 col-md-6 col-sm-6">
-                                <button type="button" class="btn">Clear Response</button>
-                                <button type="button" class="btn">Mark for Review</button>
+                                <button type="button" class="btn" (click)="clearResponse(questionIndex)">Clear Response</button>
+                                <button type="button" class="btn" (click)="markAsReview(questionIndex)">Mark for Review</button>
                             </div>
                             <div class="col-lg-6 col-md-6 col-sm-6 text-right">
-                                <button type="button" class="btn"><em class="material-icons">keyboard_arrow_left</em> Previous</button>
-                                <button type="button" class="btn">Next <em class="material-icons">keyboard_arrow_right</em></button>
+                                <button type="button" class="btn" (click)="navigateToQuestionIndex(questionIndex-1)"><em class="material-icons">keyboard_arrow_left</em> Previous</button>
+                                <button type="button" class="btn" (click)="navigateToQuestionIndex(questionIndex+1)">Next <em class="material-icons">keyboard_arrow_right</em></button>
                             </div>
                         </div>
                     </div>
@@ -178,12 +93,12 @@
                     <div class="col-lg-6 col-md-12 col-sm-12 visible-lg-block">
                         <div class="row">
                             <div class="col-lg-6 col-md-6 col-sm-6">
-                                <button type="button" class="btn">Clear Response</button>
-                                <button type="button" class="btn">Mark for Review</button>
+                                <button type="button" class="btn" (click)="clearResponse(questionIndex)">Clear Response</button>
+                                <button type="button" class="btn" (click)="markAsReview(questionIndex)">Mark for Review</button>
                             </div>
                             <div class="col-lg-6 col-md-6 col-sm-6 text-right">
-                                <button type="button" class="btn"><em class="material-icons">keyboard_arrow_left</em> Previous</button>
-                                <button type="button" class="btn">Next <em class="material-icons">keyboard_arrow_right</em></button>
+                                <button type="button" class="btn" (click)="navigateToQuestionIndex(questionIndex-1)"><em class="material-icons">keyboard_arrow_left</em> Previous</button>
+                                <button type="button" class="btn" (click)="navigateToQuestionIndex(questionIndex+1)">Next <em class="material-icons">keyboard_arrow_right</em></button>
                             </div>
                         </div>
                     </div>
