implemented auto scrolling to top of question display area whenever a category is selected

--- a/Trappist/src/Promact.Trappist.Web/wwwroot/app/questions/questions-programming/questions-programming.html
+++ b/Trappist/src/Promact.Trappist.Web/wwwroot/app/questions/questions-programming/questions-programming.html
@@ -126,7 +126,7 @@
                                     <div class="errors-container">
                                         <div *ngIf="marks.errors && (marks.dirty || marks.touched)">
                                             <p class="error-msg" *ngIf="marks.errors.required">Test Case Marks is required</p>
-                                            <p class="error-msg" *ngIf="marks.errors.pattern"> Please Enter A two Digit Decimal Number</p>
+                                            <p class="error-msg" *ngIf="marks.errors.pattern"> Please enter a two digit decimal number</p>
                                         </div>
                                     </div>
                                 </div>
